# backend/internal/api/router/execs_router.go
@@ -10,14 +10,15 @@ import (
 func registerExecRoutes(mux *http.ServeMux) {
 
 	mux.HandleFunc("GET /execs", handlers.GetExecsHandler)
-	// mux.HandleFunc("POST /execs", handlers.AddExecsHandler)
-	// mux.HandleFunc("PATCH /execs", handlers.PatchExecsHandler)
+	mux.HandleFunc("POST /execs", handlers.AddExecsHandler)
+	mux.HandleFunc("PATCH /execs", handlers.PatchExecsHandler)
 
-	// mux.HandleFunc("GET /execs/{id}", handlers.GetOneExecHandler)
-	// mux.HandleFunc("PATCH /execs/{id}", handlers.PatchOneExecHandler)
-	// mux.HandleFunc("DELETE /execs/{id}", handlers.DeleteOneExecHandler)
+	mux.HandleFunc("GET /execs/{id}", handlers.GetOneExecHandler)
+	mux.HandleFunc("PATCH /execs/{id}", handlers.PatchOneExecHandler)
+	mux.HandleFunc("DELETE /execs/{id}", handlers.DeleteOneExecHandler)
+
+	// TODO (auth, belum diimplementasi):
 	// mux.HandleFunc("POST /execs/{id}/updatepassword", handlers.UpdatePasswordHandler)
-
 	// mux.HandleFunc("POST /execs/login", handlers.LoginHandler)
 	// mux.HandleFunc("POST /execs/logout", handlers.LogoutHandler)
 	// mux.HandleFunc("POST /execs/forgotpassword", handlers.ForgotPasswordHandler)
